--- a/res/layout/fragment_report.xml
+++ b/res/layout/fragment_report.xml
@@ -53,7 +53,7 @@
     <classes.Widget.XListView
         android:id="@+id/reportListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:cacheColorHint="#00000000"  >
     </classes.Widget.XListView>
 
