--- a/res/layout/me_change_password.xml
+++ b/res/layout/me_change_password.xml
@@ -4,12 +4,52 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <RelativeLayout
+        android:id="@+id/titleLayout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/major_dark" >
+
+        <ImageView
+            android:id="@+id/backImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="@string/back"
+            android:src="@drawable/back" />
+
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/changePassword"
+            android:textColor="@color/major_light"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/saveTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16dp"
+            android:text="@string/save"
+            android:textColor="@color/major_light"
+            android:textSize="16sp" />
+    </RelativeLayout>
+
     <EditText
         android:id="@+id/oldPasswordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/titleLayout"
+        android:layout_marginTop="69dp"
+        android:ems="10"
         android:hint="@string/inputOldPassword"
         android:inputType="textPassword" />
 
@@ -17,9 +57,11 @@
         android:id="@+id/newPasswordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/oldPasswordEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/oldPasswordEditText"
         android:layout_marginTop="40dp"
+        android:ems="10"
         android:hint="@string/inputNewPassword"
         android:inputType="textPassword" />
 
@@ -27,9 +69,11 @@
         android:id="@+id/confirmPasswordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/newPasswordEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/newPasswordEditText"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="35dp"
+        android:ems="10"
         android:hint="@string/confirmNewPasswordPrompt"
         android:inputType="textPassword" >
 
