--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,37 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp" 
-    android:background="@drawable/list_item_drawable">
+    android:layout_height="84dp"
+    android:background="@drawable/list_item_drawable" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/infoLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/pivotView"
-        android:gravity="left"
-        android:orientation="vertical" >
+        android:paddingLeft="16dp" >
+
+        <ImageView
+            android:id="@+id/statusImageView"
+            android:layout_width="56dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/status" />
 
         <TextView
-            android:id="@+id/statusTextView"
-            android:layout_width="50dp"
-            android:layout_height="20dp"
-            android:gravity="center"
-            android:textColor="#FF000000"
-            android:textSize="13sp" />
-
-	    <TextView
-	        android:id="@+id/amountTextView"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+            android:id="@+id/amountTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/statusImageView"
+            android:layout_marginTop="3dp"
             android:ellipsize="end"
             android:singleLine="true"
-	        android:textColor="@color/font_major_dark"
-	        android:textSize="22sp" />
-	    
-    </LinearLayout>
+            android:textColor="@color/font_major_dark"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/signTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/amountTextView"
+            android:layout_marginBottom="1dp"
+            android:layout_marginLeft="3dp"
+            android:layout_toRightOf="@+id/amountTextView"
+            android:text="@string/rmb"
+            android:textColor="@color/hint_black"
+            android:textSize="16sp" />
+    </RelativeLayout>
 
     <View
         android:id="@+id/pivotView"
@@ -40,22 +49,23 @@
         android:layout_centerInParent="true" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/pivotView"
-        android:layout_alignParentRight="true"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingRight="16dp" >
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right" >
+            android:layout_gravity="right"
+            android:layout_marginTop="12dp" >
 
             <ImageView
                 android:id="@+id/photoImageView"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
+                android:layout_centerVertical="true"
                 android:background="@drawable/camera"
                 android:contentDescription="@string/invoice" />
 
@@ -63,27 +73,45 @@
                 android:id="@+id/reportTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
                 android:layout_toRightOf="@+id/photoImageView"
-                android:paddingLeft="5dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:textColor="#FF000000"
-                android:textSize="13sp" />
-
+                android:textColor="@color/hint_light_grey"
+                android:textSize="12sp" />
         </RelativeLayout>
 
         <TextView
             android:id="@+id/vendorTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:gravity="right"
-            android:paddingTop="5dp"
+            android:layout_marginTop="0dp"
             android:ellipsize="end"
+            android:gravity="right"
             android:singleLine="true"
-            android:textColor="#FF000000"
-            android:textSize="17sp" />
+            android:textColor="@color/font_major_dark"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/iconLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/infoLayout"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="horizontal"
+        android:gravity="right" >
+
+        <ImageView
+            android:id="@+id/categoryImageView"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:contentDescription="@string/tag"
+            android:src="@drawable/category_logo" />
+
     </LinearLayout>
 
 </RelativeLayout>
